// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsSheet snapshot with nothing enabled 1`] = `
<div
  className="css-12h374y-View-FlexBox-FlexColumn"
>
  <div
    className="css-8h6kz5-View-FlexBox-FlexColumn"
  >
    <div
      className="css-k28k5g-View-FlexBox-FlexColumn ecr18to0"
    >
      <span
        className="css-1qd3nqz-Text"
      >
        Select the plugins for which you want to export the data
      </span>
      <div
        className="css-1k23ouh-View-FlexBox-FlexColumn"
      >
        <div
          className="css-k28k5g-View-FlexBox-FlexColumn ecr18to0"
        >
          <div
            className="css-yzqaun-TooltipContainer e1abcqbd0"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="css-1jrm6r3"
            >
              <div
                className="css-17wo7w2-View-FlexBox-FlexRow epz0qe20"
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
              >
                <span
                  className="css-1186rtw-Text e19o3fcp0"
                >
                  TestDevicePlugin
                </span>
                <div
                  className="css-te359u-View-FlexBox-Spacer e13mj6h81"
                />
                <input
                  checked={false}
                  className="css-yvyra-CheckboxContainer e28aqfo0"
                  disabled={false}
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="css-1p0wwd3-View"
            />
          </div>
        </div>
        <div
          className="css-k28k5g-View-FlexBox-FlexColumn ecr18to0"
        >
          <div
            className="css-yzqaun-TooltipContainer e1abcqbd0"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="css-1jrm6r3"
            >
              <div
                className="css-17wo7w2-View-FlexBox-FlexRow epz0qe20"
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
              >
                <span
                  className="css-1186rtw-Text e19o3fcp0"
                >
                  TestPlugin
                </span>
                <div
                  className="css-te359u-View-FlexBox-Spacer e13mj6h81"
                />
                <input
                  checked={false}
                  className="css-yvyra-CheckboxContainer e28aqfo0"
                  disabled={false}
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="css-1p0wwd3-View"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-1yqvjo0"
    >
      <div
        className="css-17wo7w2-View-FlexBox-FlexRow epz0qe20"
      >
        <div
          className="css-te359u-View-FlexBox-Spacer e13mj6h81"
        />
        <div
          className="css-12n892b"
        >
          <div
            className="css-dltu4w-StyledButton enfqd40"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            Close
          </div>
        </div>
        <div
          className="css-yzqaun-TooltipContainer e1abcqbd0"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="css-3z5lpm-StyledButton enfqd40"
            disabled={true}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="primary"
          >
            Submit
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SettingsSheet snapshot with one plugin enabled 1`] = `
<div
  className="css-12h374y-View-FlexBox-FlexColumn"
>
  <div
    className="css-8h6kz5-View-FlexBox-FlexColumn"
  >
    <div
      className="css-k28k5g-View-FlexBox-FlexColumn ecr18to0"
    >
      <span
        className="css-1qd3nqz-Text"
      >
        Select the plugins for which you want to export the data
      </span>
      <div
        className="css-1k23ouh-View-FlexBox-FlexColumn"
      >
        <div
          className="css-k28k5g-View-FlexBox-FlexColumn ecr18to0"
        >
          <div
            className="css-yzqaun-TooltipContainer e1abcqbd0"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="css-1jrm6r3"
            >
              <div
                className="css-17wo7w2-View-FlexBox-FlexRow epz0qe20"
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
              >
                <span
                  className="css-1186rtw-Text e19o3fcp0"
                >
                  TestDevicePlugin
                </span>
                <div
                  className="css-te359u-View-FlexBox-Spacer e13mj6h81"
                />
                <input
                  checked={false}
                  className="css-yvyra-CheckboxContainer e28aqfo0"
                  disabled={false}
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="css-1p0wwd3-View"
            />
          </div>
        </div>
        <div
          className="css-k28k5g-View-FlexBox-FlexColumn ecr18to0"
        >
          <div
            className="css-yzqaun-TooltipContainer e1abcqbd0"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="css-1jrm6r3"
            >
              <div
                className="css-17wo7w2-View-FlexBox-FlexRow epz0qe20"
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
              >
                <span
                  className="css-1186rtw-Text e19o3fcp0"
                >
                  TestPlugin
                </span>
                <div
                  className="css-te359u-View-FlexBox-Spacer e13mj6h81"
                />
                <input
                  checked={true}
                  className="css-yvyra-CheckboxContainer e28aqfo0"
                  disabled={false}
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="css-1p0wwd3-View"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-1yqvjo0"
    >
      <div
        className="css-17wo7w2-View-FlexBox-FlexRow epz0qe20"
      >
        <div
          className="css-te359u-View-FlexBox-Spacer e13mj6h81"
        />
        <div
          className="css-12n892b"
        >
          <div
            className="css-dltu4w-StyledButton enfqd40"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            Close
          </div>
        </div>
        <div
          className="css-yzqaun-TooltipContainer e1abcqbd0"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="css-dltu4w-StyledButton enfqd40"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="primary"
          >
            Submit
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
